Add E20 to description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
  <head>
-  <title>Wawrzek Niewodniczanski's E19 (Enligthenment) CRUX Collections</title>
+  <title>Wawrzek Niewodniczanski's E20/E19 (Enligthenment) CRUX Collections</title>
   <style type="text/css">
    body
    {
