Try different description

--- a/description.html
+++ b/description.html
@@ -1,1 +1,2 @@
-<p>Orginally it was just a collection of the Enlightenment ports. Over time I've started to add other ports required for my setup (e.g. Canon printer drivers).</p>
+<p>Orginally it was just a collection of the Enlightenment related ports. Over time I've started to add other ports required for my setup (e.g. Canon printer drivers).</p>
+<p>Go back to <a href="https://wawrzek.name">main page</a>.</p>
